# edk2-ffs

./: Cargo.toml  README.md
src/: file.rs  fv.rs  lib.rs  section.rs
test/: 0A66E322-3740-4cce-AD62-BD172CECCA35.ffs  9E21FD93-9C72-4c15-8C4B-E77F1DB2D792SEC1.guided  D6A2CB7F-6A18-4e2f-B43B-9920A733700A.ffs
